//
//  AccessibilityIdentifiers.swift
//  HoodieHooShowcase
//
//  Created by Umair Ahmad on 21/01/23.
//

struct AccessibilityIdentifiers {
    
    static let imageTableView = "imageTableView"
    static let imageUrlLabel = "imageUrlLabel"
    static let tabBar = "tabBar"
    static let imageListTab = "imageListTab"
    static let lastSelectedImageTab = "lastSelectedImageTab"
    static let secondLastSelectedImageTab = "secondLastSelectedImageTab"
}
