//
//  AppMessages.swift
//  HoodieHooShowcase
//
//  Created by Umair Ahmad on 21/01/23.
//

struct AppMessages {
    
    static let alertOkButton = "Ok"
    static let jsonDecodingError = "JSON decoding error"
    static let imageSelected = "Image selected!"
    static let noImageAvailable = "No image available"
}
